<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_email"
            android:textColorHint="@color/white"
            android:padding="2dp"
            app:hintTextAppearance="@style/login_label_text"
            style="@style/login_text_input_layput">
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:theme="@style/login_edit_text_theme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="2dp"
            android:hint="@string/hint_password"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/login_label_text"
            style="@style/login_text_input_layput">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:theme="@style/login_edit_text_theme"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@color/light_yellow"
            android:text="@string/btn_login"
            android:textColor="@android:color/black" />

        <!--TextView
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" -->

        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>