<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:squint="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.Profile.Customer_Profile_Edit_Activity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="@color/top_bg"
        >
        <ImageView
            android:id="@+id/topImg"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user_icon"
            android:paddingTop="35dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#00000000"/>
            <ImageView
                android:id="@+id/photo_userImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/userImg"
                android:layout_marginTop="110dp"
                app:srcCompat="@drawable/photo_icon" />
        <TextView
            android:id="@+id/saveTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft= "12dp"
            android:paddingRight="12dp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_margin="16dp"
            android:background="@drawable/edit_profile_save_bt_bg"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/top"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:orientation="vertical"
            android:background="@color/white">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_name"
                android:textColorHint="@color/black"
                android:padding="2dp"
                app:hintTextAppearance="@style/label_text"
                style="@style/text_input_layput">
                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:theme="@style/edit_text_theme"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_email"
                android:padding="2dp"
                android:textColorHint="@color/black"
                app:hintTextAppearance="@style/label_text"
                style="@style/text_input_layput">
                <EditText
                    android:id="@+id/mailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:theme="@style/edit_text_theme"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:hint="@string/hint_phoneNumber"
                android:textColorHint="@color/black"
                android:padding="2dp"
                app:hintTextAppearance="@style/label_text"
                style="@style/text_input_layput">
                <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:theme="@style/edit_text_theme"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>